[package]
name = "notion-export-cleaner"
version = "1.0.0"
edition = "2021"
authors = ["Asynkrone"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
html-escape = "0.2.13"
indicatif = "0.17.7"
urlencoding = "2.1.3"
walkdir = "2.4.0"
