[package]
name = "notion-export-cleaner"
version = "1.2.0"
edition = "2021"
authors = ["Asynkrone"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
html-escape = "0.2.13"
indicatif = "0.17.7"
pathdiff = "0.2.3"
regex = "1.12.3"
thiserror = "1.0.62"
walkdir = "2.4.0"
